# droplets

./: .env  .gitignore  Calculate DD Time.ipynb  core.py  data_analysis.py  expiries.py  nifty_min.csv:Zone.Identifier  parse_spot.py  pyproject.toml
0DTE/: first.ipynb
5LS/: All Indices 5LS V_1.0.csv  BNF_5LS_1.csv  BNF_5LS_2nd_half.csv  BNF_5LS_everyday.csv  Nifty_5LS_1.csv  Nifty_5LS_2.csv  Nifty_5LS_3.csv  banknifty.ipynb  combine_all.ipynb  finnifty.ipynb  nifty.ipynb  stats.ipynb  stats_combined.ipynb  testing1_5LS.csv  testing_29feb_2024_5LS.csv  testing_feb_2024_5LS.csv  testing_feb_FNF_0916_2024_5LS.csv  testing_feb_FNF_0917_2024_5LS.csv  testing_feb_NIFTY_0917_2024_5LS.csv  testing_jan_2024_5LS.csv
ATR-Intraday_JJMS/: ATR_Dynamic_JJMS.csv  ATR_Dynamic_JJMS2.csv  ATR_Dynamic_JJMS_10m_14_2.csv  Check-JJMS-ATR-Intraday.csv  Scalping-Intraday-JJMS.csv  first.ipynb  opBuy-first.ipynb  scalper-options-final.ipynb  scalper_may.csv  second.ipynb  spot_scalper.ipynb  third.ipynb
Attar/: Testinggg 6R JJ_SU.csv  tel_e_munafa.ipynb
BTST Opt Sell JJSU/: first.ipynb
Hammer/: EMAR-2.ipynb  EMAR-optimisations.ipynb  EMAR.ipynb  EMAR_3m_70.csv  EMAR_5m_50EMA.csv  EMAR_LB.ipynb  Hammer.ipynb  Hammer_10m_18ema_15_50.csv  Hammer_w_hedges.csv  NLC_Hammer_MOLO.csv  NLC_New_10m.csv  add_hedges.ipynb  combine.ipynb  ema_rejection2.ipynb  molotov.csv
JJ Positional Shorting/: only_ema_n1.ipynb  rsi_n_ema1.ipynb  rsi_n_ema2.ipynb  rsi_n_ema3.ipynb  rsi_n_ema4.ipynb  trendline_break_1.ipynb
JJAS/: condors.csv  first_ROC.ipynb  kitkat_30m.csv  pos_condor.ipynb  pos_condor2.ipynb  (+1 more)
(+971 files in other folders)
