[tool.poetry]
name = "droplets"
version = "0.1.0"
description = ""
authors = ["jagjotsingh09 <jagjotsinghbudhraj31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
pyarrow = "^15.0.0"
polars = "^0.20.5"
pydantic = "^2.5.3"
httpx = "^0.26.0"
jupyter-contrib-nbextensions = "^0.7.0"
plotly = "^5.18.0"
mplfinance = "^0.12.10b0"
dash = "^2.15.0"
yfinance = "^0.2.36"
isort = "^5.13.2"
black = "^24.4.2"
pandas-ta = "^0.3.14b0"
backtesting = "^0.3.3"
pydantic-settings = "^2.3.4"
seaborn = "^0.13.2"
ta = "^0.11.0"
jupyterlab = "^4.3.5"
datetime = "^5.5"
pandas-market-calendars = "^4.6.1"
matplotlib = "^3.10.1"
jupyter-core = "^5.7.2"
motor = "^3.7.0"
scipy = "^1.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"